--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -42,6 +42,14 @@
     border-radius: 10px;    
 }
 
-span{
+#off_user{
+    color: white;
+    background-color: red;
+    display: inline-block;
+    padding: 0px 5px 0px 5px;
+    border-radius: 10px;    
+}
+
+.contador{
     font-weight: bold;
 }
